fix(design): MA-434 Add multi line structure name or ellipsis if too long

--- a/src/main/resources/public/sass/global/components/main/_header.scss
+++ b/src/main/resources/public/sass/global/components/main/_header.scss
@@ -37,8 +37,11 @@
 
   // admin-main.html design
   &.admin-main {
-    bottom: 0;
+    top: 50px;
     left: 70px;
+    line-height: 20px;
+    width: 250px;
+    text-align: initial;
   }
 }
 
